# strobe

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EFFECTS_ORDER_EXPLANATION.md  mike.txt  vcpkg.json
.github/workflows/: release-macos.yml  release-windows.yml
branding/: Assets.car  Info.plist  app.rc  icon.icns
cmake/: FixBundleMac.cmake.in  FixBundleWindows.cmake.in
shaders/: copy.frag  depth_normalize.frag  depth_reduce.frag  depth_reduce_seed.frag  marching_cubes_template.comp  mc_mesh.frag  mc_mesh.vert  quad.vert  raymarch.frag  raymarch_template.frag  sdf_density_template.comp  volume_raymarch.frag  volume_raymarch.vert
shaders/sg_plugins/: combine_intersect.glsl  combine_intersect.json  combine_subtract.glsl  combine_subtract.json  combine_union.glsl  combine_union.json  effect_rotate.glsl  effect_rotate.json  effect_scale.glsl  effect_scale.json  effect_translate.glsl  effect_translate.json  primitive_cube.glsl  primitive_cube.json  primitive_sphere.glsl  primitive_sphere.json
src/: app.cpp  app.h  diffusion_renderer.cpp  diffusion_renderer.h  fly_camera.cpp  fly_camera.h  gl_render_pass.cpp  gl_render_pass.h  gl_shader.cpp  gl_shader.h  gl_vertex_buffers.cpp  gl_vertex_buffers.h  io_utils.cpp  io_utils.h  main.cpp  main2.cpp  marching_cubes_tables.h  pch.h  scene_invalidation.cpp  scene_invalidation.h  sg_compiler.cpp  sg_compiler.h  sg_editor.cpp  sg_editor.h  sg_node.cpp  sg_node.h  sg_plugins.cpp  sg_plugins.h  sg_renderer.cpp  sg_renderer.h
